--- a/theme.toml
+++ b/theme.toml
@@ -1,12 +1,11 @@
 # theme.toml template for a Hugo theme
 # See https://github.com/gohugoio/hugoThemes#themetoml for an example
-
 name = "Funkyflex"
 license = "MIT"
 licenselink = "https://github.com/yourname/yourtheme/blob/master/LICENSE"
 description = ""
 homepage = "http://example.com/"
-tags = []
+tags = [minimal, fontawsome, headerless, light, sass]
 features = []
 min_version = "0.60"
 
