--- a/theme.toml
+++ b/theme.toml
@@ -1,8 +1,9 @@
 # theme.toml template for a Hugo theme
 # See https://github.com/gohugoio/hugoThemes#themetoml for an example
 name = "funkyflex"
+version = "0.0.1"
 license = "MIT"
-licenselink = "https://github.com/yourname/yourtheme/blob/master/LICENSE"
+licenselink = "https://github.com/KevCaz/funkyflex/blob/master/LICENSE"
 description = "Minimal theme headerless with two navigation bars."
 homepage = "http://example.com/"
 tags = ["minimal", "fontawsome", "headerless", "light", "sass"]
