--- a/theme.toml
+++ b/theme.toml
@@ -1,15 +1,15 @@
 # theme.toml template for a Hugo theme
 # See https://github.com/gohugoio/hugoThemes#themetoml for an example
 name = "funkyflex"
-version = "0.0.1"
+version = "0.1.0"
 license = "MIT"
 licenselink = "https://github.com/KevCaz/funkyflex/blob/master/LICENSE"
 description = "Minimal theme headerless with two navigation bars."
 homepage = "http://example.com/"
-tags = ["minimal", "fontawsome", "headerless", "light", "sass"]
-features = ["fontawsome", "double sided navbar"]
+tags = ["blog", "minimal", "fontawsome", "headerless", "light", "sass"]
+features = ["fontawesome", "double-sided navbar"]
 min_version = "0.84.0"
 
 [author]
-  name = "Kevin Cazelles"
-  homepage = "https://kevcaz.github.io/"
+name = "Kevin Cazelles"
+homepage = "https://kevcaz.github.io/"
