Add GHA workflows

--- a/exampleSite/hugo.toml
+++ b/exampleSite/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://kevcaz.insileco.io/"
+baseURL = "https://kevcaz.insileco.io/funkyflex"
 title = "Funkyflex Theme"
 author = "Kevin Cazelles"
 languageCode = "en-us"
