--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,9 @@ jobs:
     steps:
     - name: checkout
       uses: actions/checkout@v3
+    - uses: actions/setup-go@v4
+      with:
+        go-version: '1.21.0'
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
       with:
