--- a/theme.toml
+++ b/theme.toml
@@ -1,11 +1,11 @@
 # theme.toml template for a Hugo theme
 # See https://github.com/gohugoio/hugoThemes#themetoml for an example
 name = "funkyflex"
-version = "0.1.1"
+version = "0.2.0"
 license = "MIT"
 licenselink = "https://github.com/KevCaz/funkyflex/blob/master/LICENSE"
-description = "Minimal theme headerless with two navigation bars."
-homepage = "http://example.com/"
+description = "Minimal theme headerless with one navigation bar on both sides."
+homepage = "http://kevcaz.insileco.io/funkyflex"
 tags = ["blog", "minimal", "fontawsome", "headerless", "light", "sass"]
 features = ["fontawesome", "double-sided navbar"]
 min_version = "0.84.0"
