--- a/hugo.toml
+++ b/hugo.toml
@@ -1,8 +1,23 @@
+baseURL = 'https://example.org/'
+languageCode = 'en-US'
+title = 'My New Hugo Site'
+
+[[menus.main]]
+name = 'Home'
+pageRef = '/'
+weight = 10
+
+[[menus.main]]
+name = 'Posts'
+pageRef = '/posts'
+weight = 20
+
+[[menus.main]]
+name = 'Tags'
+pageRef = '/tags'
+weight = 30
+
 [module]
-
-[module.hugoVersion]
-  extended = true
-  min = "0.84.0"
-
-[module.imports]
-path = "github.com/hugomods/katex"
+  [module.hugoVersion]
+    extended = false
+    min = "0.116.0"
