--- a/theme.toml
+++ b/theme.toml
@@ -1,15 +1,21 @@
-# theme.toml template for a Hugo theme
-# See https://github.com/gohugoio/hugoThemes#themetoml for an example
-name = "funkyflex"
-version = "0.2.0"
-license = "MIT"
-licenselink = "https://github.com/KevCaz/funkyflex/blob/master/LICENSE"
-description = "Minimal theme headerless with one navigation bar on both sides."
-homepage = "http://kevcaz.insileco.io/funkyflex"
-tags = ["blog", "minimal", "fontawsome", "headerless", "light", "sass"]
-features = ["fontawesome", "double-sided navbar"]
-min_version = "0.84.0"
+name = 'funkyflex'
+license = 'MIT'
+licenselink = 'https://github.com/KevCaz/funkyflex/LICENSE'
+description = 'Minimal theme headerless with one navigation bar on both sides'
 
+# The home page of the theme, where the source can be found
+homepage = 'https://github.com/KevCaz/funkyflex'
+
+# If you have a running demo of the theme
+demosite = 'https://kevcaz.insileco.io/funkyflex/'
+
+# Taxonomy terms
+tags = ['blog', 'minimal', 'fontawsome', 'headerless', 'light', 'sass']
+features = ['fontawesome', 'double-sided navbar']
+
+
+# If the theme has a single author
 [author]
-name = "Kevin Cazelles"
-homepage = "https://kevcaz.github.io/"
+  name = 'Kevin Cazelles'
+  homepage = 'https://kevcaz.insileco.io/'
+
